--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 </header>
 <body>
 <h1> Bonjour </h1>
+Cet exercice a pour objectif de mettre en pratique les notions que vous avez acquises dans les deux premières parties de ce cours sur Git et Github.
+
 </body>
 </html>
